# model_bakery

./: .envrc  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  dev_requirements.txt  postgis-tests.sh  postgres-docker  pyproject.toml  readthedocs.yml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox-linter.ini  tox.ini
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: changelog.yml  ci.yml  linter.yml  python-package.yml  release.yml  tests.yml
docs/: basic_usage.md  conf.py  how_bakery_behaves.md  index.md  migrating_from_mommy.md  recipes.md  requirements.txt  test_runners.md
docs/source/: basic_usage.rst  conf.py  how_bakery_behaves.rst  index.rst  migrating_from_mommy.rst  recipes.rst  test_runners.rst
model_bakery/: __about__.py  __init__.py  _types.py  baker.py  content_types.py  exceptions.py  faker_gen.py  generators.py  gis.py  random_gen.py  recipe.py  timezone.py  utils.py
model_mommy/: mommy.py  random_gen.py
tests/: conftest.py  test_async.py  test_baker.py  test_extending_bakery.py  test_filling_fields.py  test_recipes.py  test_utils.py  utils.py
tests/generic/: baker_recipes.py  fields.py  forms.py  generators.py  models.py
tests/generic/tests/sub_package/: baker_recipes.py
tests/uninstalled/: baker_recipes.py
utils/: from_mommy_to_bakery.py
