[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "model-bakery"
dynamic = ["version"]
description = "Smart object creation facility for Django."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache License 2.0"}
authors = [
    { name = "berin", email = "bernardoxhc@gmail.com" },
    { name = "amureki", email = "amureki@hey.com" },
]
keywords = [
    "django",
    "factory",
    "python",
    "testing",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]
dependencies = [
    "django>=3.2",
]

[project.optional-dependencies]
test = [
    "coverage",
    "pillow",
    "pytest",
    "pytest-django",
    "black",
    "ruff",
    "mypy",
]
docs = [
    "Sphinx",
    "sphinx-rtd-theme",
]

[project.urls]
Homepage = "https://github.com/model-bakers/model_bakery"

[tool.coverage.run]
branch = true
parallel = true
source = [
    "model_bakery",
]
omit = [
    "model_bakery/__about__.py",
    "model_bakery/_types.py",
]

[tool.coverage.paths]
source = [
    "model_bakery",
    ".tox/**/site-packages/model_bakery",
]

[tool.coverage.report]
show_missing = true

[tool.hatch.version]
path = "model_bakery/__about__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/model_bakery",
]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_calls = true

[tool.pytest.ini_options]
addopts = "--tb=short -rxs --nomigrations"

[tool.ruff]
target-version = "py38"

select = [
    "S", # flake8-bandit
    "B", # flake8-bugbear
    "C", # flake8-comprehensions
    "SIM", # flake8-simplify
    "I", # isort
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "D", # pydocstyle
    "UP", # pyupgrade
    "RUF100", # Unused noqa directive
]

ignore = ["B904", "E501", "S101", "D1", "D212"]

[tool.ruff.per-file-ignores]
"tests/test_*.py" = [
    "S",
]

[tool.ruff.isort]
combine-as-imports=true
split-on-trailing-comma=true
section-order = ["future", "standard-library", "django", "third-party", "first-party", "local-folder"]
force-wrap-aliases=true

[tool.ruff.isort.sections]
django = ["django"]

[tool.ruff.pydocstyle]
convention = "google"
