[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "model-bakery"
dynamic = ["version"]
description = "Smart object creation facility for Django."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache License 2.0"}
authors = [
    { name = "berin", email = "bernardoxhc@gmail.com" },
    { name = "amureki", email = "amureki@hey.com" },
]
keywords = [
    "django",
    "factory",
    "python",
    "testing",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development",
]
dependencies = [
    "django>=4.2",
]

[project.optional-dependencies]
test = [
    "coverage",
    "pillow",
    "pytest",
    "pytest-django",
    "black",
    "ruff",
    "mypy",
]
docs = [
    "Sphinx",
    "sphinx-rtd-theme",
    "myst-parser",
]

[project.urls]
Homepage = "https://github.com/model-bakers/model_bakery"

[tool.coverage.run]
branch = true
parallel = true
source = [
    "model_bakery",
]
omit = [
    "model_bakery/__about__.py",
    "model_bakery/_types.py",
]

[tool.coverage.paths]
source = [
    "model_bakery",
    ".tox/**/site-packages/model_bakery",
]

[tool.coverage.report]
show_missing = true

[tool.hatch.version]
path = "model_bakery/__about__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/model_bakery",
]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_calls = true

[tool.pytest.ini_options]
addopts = "--tb=short -rxs --nomigrations"

[tool.ruff.lint]
select = [
    "S", # flake8-bandit
    "B", # flake8-bugbear
    "C", # flake8-comprehensions
    "SIM", # flake8-simplify
    "I", # isort
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "D", # pydocstyle
    "UP", # pyupgrade
    "RUF100", # Unused noqa directive
]

ignore = ["B904", "E501", "S101", "D1", "D212"]

[tool.ruff.lint.per-file-ignores]
"tests/test_*.py" = [
    "S",
]

[tool.ruff.lint.isort]
combine-as-imports=true
split-on-trailing-comma=true
section-order = ["future", "standard-library", "django", "third-party", "first-party", "local-folder"]
force-wrap-aliases=true

[tool.ruff.lint.isort.sections]
django = ["django"]

[tool.ruff.lint.pydocstyle]
convention = "google"
